# solana-rwa

./: .gitignore  Anchor.toml  LICENSE  PROJECT_SUMMARY.md  README.md  package.json
app/: next.config.js  package.json  tailwind.config.js  tsconfig.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/assets/: page.tsx
app/src/app/dashboard/: page.tsx
app/src/components/: AssetCard.tsx  BuyFractionModal.tsx  CreateAssetModal.tsx
app/src/contexts/: WalletContext.tsx
docs/: DEVELOPER_GUIDE.md  QUICK_START.md  architecture-diagram.txt  architecture.md
programs/rwa_token/: Cargo.toml
programs/rwa_token/src/: lib.rs
scripts/: setup.sh
sdk/: package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  index.ts  metadata.ts  types.ts  utils.ts
tests/: jest.config.js  package.json
tests/src/: client.test.ts  setup.ts  utils.test.ts
