[package]
name = "rwa_token"
version = "0.1.0"
description = "Real World Asset Tokenization Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = "4.0"
